09-kubernetes-intermediate/lab-rbac-namespace-security/solutions/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taskflow-dev
  labels:
    app.kubernetes.io/part-of: taskflow
    environment: dev
    pod-security.kubernetes.io/enforce: baseline
---
apiVersion: v1
kind: Namespace
metadata:
  name: taskflow-staging
  labels:
    app.kubernetes.io/part-of: taskflow
    environment: staging
    pod-security.kubernetes.io/enforce: baseline
---
apiVersion: v1
kind: Namespace
metadata:
  name: taskflow-prod
  labels:
    app.kubernetes.io/part-of: taskflow
    environment: production
    pod-security.kubernetes.io/enforce: restricted
